fixed bug: wrong background color

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 body {
   background: lightcoral;
-  background: rgb(192, 128, 235);
 }
 .container {
   position: absolute;
